fix editor issue with word wrapping

--- a/editor/editor.css
+++ b/editor/editor.css
@@ -3,12 +3,15 @@ editor-window {
     font-family: "monospace";
     font-size: 1em;
     gap: 0.5em;
-    overflow-x: hidden;
+    overflow-x: auto;
     overflow-y: auto;
     width: 100%;
+    height: 100%;
 }
 editor-window .code {
-    flex-basis: 100%;
+    width: max-content;
+    min-width: calc(100% - 4em);
+    height: 100%;
 }
 editor-window .line-nrs {
     text-align: right;
@@ -22,17 +25,17 @@ editor-window .colors, editor-window .line-nrs, editor-window textarea {
 }
 
 editor-window .colors, editor-window textarea {
-    width: 100%;
-    height: 100vh;
     overflow: visible;
-    border: none
+    border: none;
+    white-space: pre;
 }
 editor-window textarea {
     background-color: black;
     color: transparent;
     caret-color: white;
     resize: none;
-    overflow: hidden;
+    min-width: 100%;
+    min-height: 95%;
 }
 editor-window .colors {
     position: absolute;
